--- a/index.html
+++ b/index.html
@@ -20,40 +20,41 @@
         <section id="section-a" class="flex">
             <div class="column-container">
                 <h2>Web & Application Development</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe sint eligendi possimus? Unde officiis magnam laborum ipsa distinctio odio
-                vero dolores dicta aliquam aperiam repellendus.Perferendis officiis deserunt velit voluptas nobis sequi animi totam, accusantium, ex eius quia, natus quo?</p>
+                <div class="content-text-a">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe sint eligendi possimus? Unde officiis magnam laborum ipsa distinctio odio, vero dolores dicta aliquam aperiam repellendus. Perferendis officiis deserunt velit voluptas nobis sequi animi totam, accusantium, ex eius quia, natus quo?</p>
+                </div>
             </div>
         </section>
         <section id="section-b" class="flex">
             <div class="info-container-b">
                 <div class="info-wrapper">
                     <div class="info-img">
-                        <source media="(max-width: 700)" srcset="./assets/images/web-dev-small.jpg">
+                        <source media="(min-width: 700)" srcset="./assets/images/web-dev-small.jpg">
                         <img src="./assets/images/web-dev.jpg" alt="Web Dev">
                     </div>
                     <div class="info-b">
                         <h3>Web Development</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum culpa neque quo eum et quasi velit voluptatum cum maiores exercitationem.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum culpa neque quo eum etquasi velit voluptatum cum maiores exercitationem.</p>
                     </div>
                 </div>
                 <div class="info-wrapper">
                     <div class="info-img">
-                        <source media="(max-width: 700)" srcset="./assets/images/mobile-app-small.jpg">
+                        <source media="(min-width: 700)" srcset="./assets/images/mobile-app-small.jpg">
                         <img src="./assets/images/mobile-app.jpg" alt="Mobile App">
                     </div>
                     <div class="info-b">
                         <h3>Mobile Applications</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum culpa neque quo eum et quasi velit voluptatum cum maiores exercitationem.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum culpa neque quo eum etquasi velit voluptatum cum maiores exercitationem.</p>
                     </div>
                 </div>
                 <div class="info-wrapper">
                     <div class="info-img">
-                        <source media="(max-width: 700)" srcset="./assets/images/tech-marketing-small.jpg">
+                        <source media="(min-width: 700)" srcset="./assets/images/tech-marketing-small.jpg">
                         <img src="./assets/images/tech-marketing.jpg" alt="Tech Marketing">
                     </div>
                     <div class="info-b">
                         <h3>Tech Marketing</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum culpa neque quo eum et quasi velit voluptatum cum maiores exercitationem.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum culpa neque quo eum etquasi velit voluptatum cum maiores exercitationem.</p>
                     </div>
                 </div>
             </div>
